src/static/scss/components/_lightbox.scss
.gallery {
  @include flex-center;

  margin: $default-margin 0;

  .img-container {
    // positions text properly on picture tiles
    @include transform(translate3d(0, 0, 0));
  }
}

.img-link {
  @include transition(ease-in-out 0.5s);

  @include on-event {
    img {
      opacity: 0.5;

      @include transition(ease-in-out 0.5s);
    }

    .tile {
      background-color: rgba(0, 0, 0, 1);

      @include transition(ease-in-out 0.5s);
    }
  }

  img {
    height: 250px;
    width: 100%;
    object-fit: cover;

    @include transition(ease-in-out 0.5s);
  }

  .tile {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: $white;
    background-color: rgba(0, 0, 0, 0.7);

    @include transition(ease-in-out 0.5s);

    p {
      font-size: 1.5em;
      text-align: center;
      padding: 0.5em;
      letter-spacing: $default-letter-spacing;
    }
  }
}

// default width for pictures
.default-width {
  width: 33.3%;

  @include bp-xs { width: 100%; }

  @include bp-sm { width: 50%; }

  @include bp-xl { width: 25%; }
}

/*
  make the width better for single, two, three pictures
  this is to fix scaling issues in larger devices
*/
.one-center {
  @include bp-sm { width: 100%; }

  @include bp-md { width: 66.7%; }

  @include bp-lg { width: 50%; }

  @include bp-xl { width: 33.3%; }
}

.two-center {
  @include bp-md { width: 50%; }

  @include bp-lg { width: 50%; }

  @include bp-xl { width: 33.3%; }
}

